2010-10-03  Glenn Morris  <rgm@gnu.org>

	* obsolete/x-menu.el: Remove file, obsolete since 21.1

	* textmodes/rst.el (rst-font-lock-keywords-function):
	Drop Emacs 20 code.

	* textmodes/artist.el (artist-replace-char): Drop Emacs 20 code.

	* printing.el: Drop Emacs 20 code.

	* calendar/appt.el (appt-delete): Don't autoload it (you can't use it
	without having used appt.el already).

	* subr.el (make-local-hook): Remove function obsolete since 21.1.
	* progmodes/cc-mode.el (make-local-hook): Don't do cc-bytecomp stuff.
	(c-basic-common-init, c-font-lock-init): Only call make-local-hook on
	XEmacs.
	* progmodes/cc-styles.el (make-local-hook): Don't do cc-bytecomp stuff.
	(c-make-styles-buffer-local): Only call make-local-hook on XEmacs.

	* ps-def.el (leading-code-private-22, charset-bytes, charset-id)
	(charset-width, find-charset-region, chars-in-region, forward-point)
	(encode-coding-string, coding-system-p, ccl-execute-on-string)
	(define-ccl-program, multibyte-string-p, string-make-multibyte):
	Remove compatibility cruft (none of these are used by ps*.el).

2010-10-03  Kevin Rodgers  <kevin.d.rodgers@gmail.com>

	* subr.el (booleanp): Return t instead of a list (Bug#7086).

2010-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* server.el (server-process-filter, server-return-error): Give
	emacsclient time to shut down after receiving an error string.

2010-10-02  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (remote-file-name-inhibit-cache): New defcustom.

	* time.el (display-time-file-nonempty-p): Use
	`remote-file-name-inhibit-cache'.

	* net/tramp.el (tramp-completion-reread-directory-timeout): Fix
	docstring.

	* net/tramp-cache.el (tramp-cache-inhibit-cache): Remove.
	(tramp-get-file-property): Replace `tramp-cache-inhibit-cache' by
	`remote-file-name-inhibit-cache'.  Check also for an integer
	value.  Add/increase counter when `tramp-verbose' >= 10.
	(tramp-set-file-property): Add/increase counter when
	`tramp-verbose' >= 10.
